--- a/cloud-gateway/src/main/resources/application.yml
+++ b/cloud-gateway/src/main/resources/application.yml
@@ -4,6 +4,12 @@ server:
 spring:
   application:
     name: GATEWAY
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+      settings:
+        trace: false
   cloud:
     gateway:
       routes:
@@ -24,26 +30,34 @@ spring:
           predicates:
             - Path=/mailer/**
   datasource:
-    password:
-    url: jdbc:mysql://localhost:3306/notificationdb
-    username: root
-    jpa:
-      hibernate:
-        ddl-auto: create
-      properties:
-        hibernate:
-          dialect: org.hibernate.dialect.MySQL8Dialect
-          format_sql: true
-        show_sql: true
+    url: jdbc:h2:mem:fintechdb
+    usename: root
+    password: password
+    driver-class-name: org.h2.Driver
+  jpa:
+    spring:
+      jpa:
+        database-platform: org.hibernate.dialect.H2Dialect
 
-  main:
-    web-application-type: reactive
+#  datasource:
+#    password: password
+#    url: jdbc:mysql://fintechdb.ccdo9omzcuea.us-east-1.rds.amazonaws.com:3306/notificationdb
+#    username: root
+#    jpa:
+#      hibernate:
+#        ddl-auto: create
+#      properties:
+#        hibernate:
+#          dialect: org.hibernate.dialect.MySQL8Dialect
+#          format_sql: true
+#        show_sql: true
 
 eureka:
-  client:
-    register-with-client: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
   instance:
-    hostname: localhost
+    lease-expiration-duration-in-seconds: 1
+    lease-renewal-interval-in-seconds: 28
+    prefer-ip-address: true
+    ip-address: ${EUREKA_IP:localhost}
+  client:
+    service-url:
+      defaultZone: ${DEFAULT_ZONE:http://localhost:5000/eureka/}
