--- a/email-client/src/main/resources/application.yml
+++ b/email-client/src/main/resources/application.yml
@@ -2,13 +2,14 @@ server:
   port: 9999
 
 eureka:
+  instance:
+    lease-expiration-duration-in-seconds: 1
+    lease-renewal-interval-in-seconds: 28
+    prefer-ip-address: true
+#    ip-address: ${EUREKA_IP:localhost}
   client:
-    register-with-eureka: true
-    fetch-registry: true
     service-url:
-      defaultZone: http://localhost:8761/eureka/
-    instance:
-      hostname: localhost
+      defaultZone: http://server-env.eba-ghkahchb.us-east-1.elasticbeanstalk.com/eureka/
 
 spring:
   application:
