--- a/service-registry/src/main/resources/application.yml
+++ b/service-registry/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 server:
-  port: 5000
+  ${PORT:5000}
+#  port: 5000
+security:
+  user:
+    password: ${eureka.password}
 
 #logging:
 #  level:
@@ -8,10 +12,20 @@ server:
 #        eureka: OFF
 #        discovery: OFF
 
+#eureka:
+#  client:
+#    register-with-eureka: false
+#    fetch-registry: false
+
 eureka:
+  instance:
+    hostname: localhost
   client:
-    register-with-eureka: false
-    fetch-registry: false
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+  password: ${EUREKA_USER_PASSWORD:password}
 
 spring:
   application:
